--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,8 +32,6 @@
   display: flex;
   gap: $spacing-xxl;
   list-style: none;
-  margin: 0;
-  padding: 0;
 
   a {
     color: $white;
@@ -49,6 +47,10 @@
       color: $light-green;
       font-weight: bold;
     }
+  }
+
+  li {
+    margin: 0;
   }
 }
 
